--- a/styles/common.css
+++ b/styles/common.css
@@ -1,17 +1,18 @@
-.title-head{
-    font-family: 'Gloria Hallelujah', cursive;
-    font-weight: bold;
-    letter-spacing: 3px;
-    font-size: 25px;
+.title-head {
+	font-family: 'Gloria Hallelujah', cursive;
+	font-weight: bold;
+	letter-spacing: 3px;
+	font-size: 25px;
 }
 
-.circular-pic{
-    overflow: hidden; 
-    border-radius: 50%;
+.circular-pic {
+	overflow: hidden;
+	border-radius: 50%;
 }
 
-.bg-main-gradient{
-    background-image: linear-gradient(to right, #da4453 , #89216b) !important;
+.bg-main-gradient {
+	background-image: linear-gradient(to right, #da4453, #89216b) !important;
+	color: white;
 }
 
 textarea:focus,
@@ -29,8 +30,8 @@ input[type="url"]:focus,
 input[type="search"]:focus,
 input[type="tel"]:focus,
 input[type="color"]:focus,
-.uneditable-input:focus {   
-  border-color: rgba(255, 255, 255, 0.8);
-  box-shadow: 0 1px 1px rgba(255, 255, 255, 0.075) inset, 0 0 8px rgba(255, 255, 255, 0.6);
-  outline: 0 none;
+.uneditable-input:focus {
+	border-color: rgba(255, 255, 255, 0.8);
+	box-shadow: 0 1px 1px rgba(255, 255, 255, 0.075) inset, 0 0 8px rgba(255, 255, 255, 0.6);
+	outline: 0 none;
 }
