--- a/styles/common.css
+++ b/styles/common.css
@@ -35,3 +35,8 @@ input[type="color"]:focus,
 	box-shadow: 0 1px 1px rgba(255, 255, 255, 0.075) inset, 0 0 8px rgba(255, 255, 255, 0.6);
 	outline: 0 none;
 }
+
+.like{
+	cursor: pointer;
+	margin-right: 10px;
+}
