--- a/styles/common.css
+++ b/styles/common.css
@@ -8,6 +8,16 @@
 body  {
 	background-image: url("");
 }
+
+.click-handler{
+	cursor: pointer;
+}
+
+.click-handler:hover{
+	border-color: rgba(255, 255, 255, 0.8);
+	box-shadow: 0 1px 1px rgba(255, 255, 255, 0.075) inset, 0 0 8px rgba(255, 255, 255, 0.6);
+	outline: 0 none;
+}
 /* 
 .nav-handler{
 	position: fixed;
