--- a/styles/index.css
+++ b/styles/index.css
@@ -1,11 +1,3 @@
-.adv-handler{
-    height: fit-content !important;
-    background-image: linear-gradient(to right, #da445369, #89216b5e) !important;
-    position: fixed;
-    top: 60px;
-    right: 0;
-}
-
-.adv-handler > .card{
-    margin-bottom: 13px;
+.btn-height{
+    width: 150px;
 }
