JAVASCRIPT: add comment on post functionality completed & FIX: bg mobile size issue solved

--- a/styles/common.css
+++ b/styles/common.css
@@ -23,7 +23,7 @@
     left: 0;
     top: 0;
     width: 100%;
-    height: auto;
+    height: 100%;
     opacity: 0.4;
 }
 
@@ -61,11 +61,11 @@
 }
 
 .adv-handler{
-    height: fit-content !important;
     background-image: linear-gradient(to right, #da445369, #89216b5e) !important;
     position: fixed;
     top: 60px;
     right: 0;
+    height: 100%;
 }
 
 .adv-handler > .card{
