--- a/styles/common.css
+++ b/styles/common.css
@@ -36,6 +36,10 @@
     background-image: linear-gradient(to right, #e6d02a, #be4812);
 }
 
+.visible-handle{
+	visibility: hidden;
+}
+
 .circular-pic {
 	overflow: hidden;
 	border-radius: 50%;
